--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": {
+    "name": "Kevin Smith",
+    "email": "kevin@hearsayinteractive.com",
+    "url": "https://kevinsmith.io/"
+  },
+  "homepage": "https://developers.geocarrot.com",
   "license": "Apache-2.0",
   "devDependencies": {
     "babel-core": "^6.13.2",
     "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-register": "^6.11.6",
     "gulp": "^3.9.1",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
