--- a/package.json
+++ b/package.json
@@ -23,9 +23,14 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-register": "^6.11.6",
     "gulp": "^3.9.1",
+    "gulp-jscs": "^4.0.0",
+    "gulp-jshint": "^2.0.1",
+    "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^2.0.0",
+    "jshint": "^2.9.2",
+    "jshint-stylish": "^2.2.0",
     "webpack": "^1.13.1",
     "webpack-stream": "^3.2.0"
   }
