--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-uglify": "^2.0.0",
     "jshint": "^2.9.2",
     "jshint-stylish": "^2.2.0",
+    "lodash": "^4.14.1",
     "webpack": "^1.13.1",
     "webpack-stream": "^3.2.0"
   }
