--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "lodash": "^4.14.1",
     "webpack": "^1.13.1",
     "webpack-stream": "^3.2.0"
+  },
+  "dependencies": {
+    "js-cookie": "^2.1.2"
   }
 }
