--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "user-location",
   "version": "0.0.1",
-  "description": "Simple library to provide the current user's location, with an optional fallback method of obtaining their coordinates.",
+  "description": "Simple library to get the current user's location, with an optional fallback method of obtaining their coordinates.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
