--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "user-location",
   "version": "0.0.1",
   "description": "Simple library to get the current user's location, with an optional fallback method of obtaining their coordinates.",
-  "main": "dist/UserLocation.js",
+  "main": "dist/UserLocation.min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
